# HPCS

./: .gitignore  BandDepth.cpp  BandDepth.hpp  CMakeLists.txt  Doxyfile.in  HPCSDefs.hpp  Makefile  README.md  bandDepth.cpp  bandDepth.hpp  bandDepthData.cpp  bandDepthData.hpp  bandDepthFactory.hpp  bandDepthRef.cpp  bandDepthRef.hpp  bd.I.all.dat.simple  combinationFactory.cpp  combinationFactory.hpp  combinations.cpp  combinations.hpp  data  dataSet.cpp  dataSet.hpp  depthMeasure.hpp  depthMeasureFactory.hpp  extendedSort.hpp  factory.hpp  main.cpp  mpi_utility.cpp  mpi_utility.hpp  multiDepthMeasure.hpp  multiDepthMeasureFactory.hpp
leads/: I.txt  II.txt  IIder.txt  Ider.txt  V1.der.txt  V1.txt  V2.txt  V2der.txt  V3.txt  V3der.txt  V4.txt  V4der.txt  V5.txt  V5der.txt  V6.txt  V6der.txt
old/: bandDepth.cpp.old  bandDepth.hpp.old  bandDepth.hpp.veryold
report/: frontespizio.tex  preambolo.tex  report.tex  report.tex.backup
report/slides/: slides.blg  slides.nav  slides.out  slides.tex  slides.tex.backup
source/: CMakeLists.txt  HPCSDefs.hpp  bandDepth.hpp  bandDepthData.cpp  bandDepthData.hpp  bandDepthFactory.hpp  bandDepthRef.hpp  combinations.cpp  combinations.hpp  dataSet.cpp  dataSet.hpp  depthMeasure.hpp  depthMeasureFactory.hpp  extendedSort.hpp  factory.hpp  matrixDistances.cpp  matrixDistances.hpp  mpi_utility.cpp  mpi_utility.hpp  multiDepthMeasure.hpp  multiDepthMeasureFactory.hpp  permutationTest.cpp  permutationTest.hpp  varCovStructure.cpp  varCovStructure.hpp
synthetic/amplitudeSine/: I.txt  II.txt  II_ampli_sine.ps  II_tower.ps  I_ampli_sine.ps  generator.r  perturbationsPlot.ps
synthetic/oneOutlierSine/: I.txt  II_one_outlier_sine.ps  I_one_outlier_sine.ps  generator.r
synthetic/outliers/: generator.r
synthetic/outliersSine/: .Rhistory  I.txt  II.txt  II_outliers.ps  I_outliers.ps
synthetic/phaseAmplitudeSine/: .Rhistory  I.txt  II.txt  II_phase_ampli_sine.ps  I_phase_ampli_sine.ps  generator.r  perturbationsPlot.ps
synthetic/phaseSine/: I.txt  II.txt  II_phase_sine.ps  I_phase_sine.ps  generator.r  perturbationsPlot.ps
synthetic/someOutliersSine/: II.txt  II_some_outliers.ps  I_some_outliers.ps  generator.r
synthetic/towerSine/: .Rhistory  II.txt  II_tower.ps  I_ampli_sine.ps  I_tower.ps  generator.r
test/: CMakeLists.txt
test/dataSet/: CMakeLists.txt  data  mainDataSet  mainDataSet.cpp  mainDataSetLevelled.cpp  main_dataSet.cpp  main_dataSetLevelled.cpp  main_eigen.cpp
test/depthMeasure/: CMakeLists.txt  data  depthMeasure.plot  main_depthMeasure.cpp  main_depthMeasureAll.cpp  main_depthMeasureRef.cpp  main_multiDepthMeasureAll.cpp  main_multiDepthMeasureRef.cpp  multiDepthMeasure.plot  multiDepthMeasureAll.plot
test/factory/: CMakeLists.txt  data  main.cpp  main_bandDepth.cpp  main_bandDepthRef.cpp
test/fbplot/: .Rhistory  CMakeLists.txt  ECG.R  data  fbplot.plot  fbplot.r  main_fbplot.cpp
test/genton/: CMakeLists.txt  Makefile  computeBandDepth.cpp  data  genton.plot  main_genton  main_genton.cpp  main_gentonAll.cpp  main_gentonRef.cpp  user_fun.cpp  user_fun.hpp
test/logistic/: CMakeLists.txt  data  logistic.R  logistic.plot  main_logistic.cpp  random.plot  weights.w
test/matrixDistances/: CMakeLists.txt  data  main_matrixDistances.cpp
test/outliers/: CMakeLists.txt  data  main_outliersAll.cpp  main_outliersRef.cpp  outliers.plot
test/permutationTest/: CMakeLists.txt  data  generator.R  main_matrixDistances.cpp  main_permutationTest.cpp  main_powerMethod.cpp
test/robust/: CMakeLists.txt  data  main_robustAll.cpp  main_robustRef.cpp  robust.plot
test/tower/: CMakeLists.txt  data  main_towerAll.cpp  main_towerRef.cpp  tower.plot
test/wilcoxon/: CMakeLists.txt  data  main_mbdRefSet.cpp  main_sample.cpp  main_wilcoxon.cpp  wilcoxon.R
