CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BandDepth)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Require MPI for this project:
FIND_PACKAGE(MPI REQUIRED)
SET( CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
SET( CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
SET( CMAKE_BUILD_TYPE ${CMAKE_CXX_FLAGS_DEBUG})

INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

ADD_LIBRARY( mbd bandDepth bandDepthData bandDepthRef combinations mpi_utility dataSet )

# Adding test subdirectory

ADD_SUBDIRECTORY(test)
