CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(BandDepth)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Require MPI for this project:
FIND_PACKAGE(MPI REQUIRED)
SET( CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
SET( CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
SET( CMAKE_BUILD_TYPE ${CMAKE_CXX_FLAGS_DEBUG})
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

#Require Doxygen for documentation
FIND_PACKAGE(Doxygen)
IF (DOXYGEN_FOUND)
SET(DOXYGEN_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in )
SET(DOXYGEN_OUTPUT ${CMAKE_BINARY_DIR}/doc)
ADD_CUSTOM_COMMAND(OUTPUT ${DOXYGEN_OUTPUT}
   COMMAND ${CMAKE_COMMAND} -E echo ${CMAKE_BINARY_DIR}
   COMMAND ${CMAKE_COMMAND} -E echo_append "Building API Documentation..."
   COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_INPUT}
   COMMAND ${CMAKE_COMMAND} -E echo "Done."
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   DEPENDS ${DOXYGEN_INPUT}
  )

ADD_CUSTOM_TARGET(doc DEPENDS ${DOXYGEN_OUTPUT})
ENDIF (DOXYGEN_FOUND)




# Adding test subdirectory
ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(test)
