

EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/data ${CMAKE_CURRENT_BINARY_DIR}/data  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/fbplot.plot ${CMAKE_CURRENT_BINARY_DIR}/fbplot.plot )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/weights.w ${CMAKE_CURRENT_BINARY_DIR}/weights.w )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}}/fbplot.r ${CMAKE_CURRENT_BINARY_DIR}/fbplot.r )

# A first executable

ADD_EXECUTABLE(main_fbplot.exe main_fbplot.cpp )
TARGET_LINK_LIBRARIES(main_fbplot.exe ${MPI_LIBRARIES} mbd)
