

EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/data ${CMAKE_CURRENT_BINARY_DIR}/data  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/genton.plot ${CMAKE_CURRENT_BINARY_DIR}/genton.plot )

# A first executable

ADD_EXECUTABLE(main_gentonAll.exe main_gentonAll user_fun )
TARGET_LINK_LIBRARIES(main_gentonAll.exe ${MPI_LIBRARIES} HPCS)
# ENABLE_TESTING()
# ADD_TEST(mytest  ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/mainDataSet.exe )


ADD_EXECUTABLE(main_gentonRef.exe main_gentonRef user_fun )
TARGET_LINK_LIBRARIES(main_gentonRef.exe ${MPI_LIBRARIES} HPCS)
# ENABLE_TESTING()
# ADD_TEST(mytest  ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/mainDataSet.exe )
