

EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/data ${CMAKE_CURRENT_BINARY_DIR}/data  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/dataSet.1.dat ${CMAKE_CURRENT_BINARY_DIR}/dataSet.1.dat  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/dataSet.2.dat ${CMAKE_CURRENT_BINARY_DIR}/dataSet.2.dat  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/dataSet.3.dat ${CMAKE_CURRENT_BINARY_DIR}/dataSet.3.dat  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/dataSet.4.dat ${CMAKE_CURRENT_BINARY_DIR}/dataSet.4.dat  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/Popolazione1.txt ${CMAKE_CURRENT_BINARY_DIR}/Popolazione1.txt  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/Popolazione2.txt ${CMAKE_CURRENT_BINARY_DIR}/Popolazione2.txt  )

EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECG_LBBB.txt ${CMAKE_CURRENT_BINARY_DIR}/ECG_LBBB.txt  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECG_Sani.txt ${CMAKE_CURRENT_BINARY_DIR}/ECG_Sani.txt  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECGder_LBBB.txt ${CMAKE_CURRENT_BINARY_DIR}/ECGder_LBBB.txt  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECGder_Sani.txt ${CMAKE_CURRENT_BINARY_DIR}/ECGder_Sani.txt  )

EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECG_V2_Sani.txt ${CMAKE_CURRENT_BINARY_DIR}/ECG_V2_Sani.txt  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECG_V2_LBBB.txt ${CMAKE_CURRENT_BINARY_DIR}/ECG_V2_LBBB.txt  )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECGder_V2_LBBB.txt ${CMAKE_CURRENT_BINARY_DIR}/ECGder_V2_LBBB.txt )
EXECUTE_PROCESS( COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/ECGder_V2_Sani.txt ${CMAKE_CURRENT_BINARY_DIR}/ECGder_V2_Sani.txt  )

# First executable

ADD_EXECUTABLE(main_matrixDistances.exe main_matrixDistances )
TARGET_LINK_LIBRARIES(main_matrixDistances.exe ${MPI_LIBRARIES} HPCS)

# Second executable

ADD_EXECUTABLE(main_permutationTest.exe main_permutationTest )
TARGET_LINK_LIBRARIES(main_permutationTest.exe ${MPI_LIBRARIES} HPCS)
